zola/sass/styles.scss
@import "syntax-highlight-theme.css"; // in the static folder
@import "fonts";
@import "theme";
@import "bulma";
@import "bulma-extensions";
@import "fontawesome";

body {
  margin: 0 0;
  background-color: $codemonger;
  color: $codemonger-invert;
}

@mixin monospace-font {
  font-family: 'Courier Prime', 'Source Han Code JP', monospace;
}

a,
p {
  &.navbar-item {
    @include monospace-font;
  }
}

.title,
.subtitle {
  @include monospace-font;
}

// Tweet button
.is-twitter {
  span {
    font-family: 'Helvetica Neue', Arial, sans-serif;
    font-weight: 500;
  }
}

// markdown content
.content {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  code {
    @include monospace-font;
  }
  p {
    line-height: 1.7;
  }
  code {
    background-color: $codemonger;
    color: $codemonger-invert;
    font-size: 1.02em;
    /* looks better inline. */
    padding-left: 0.2em;
    padding-right: 0.2em;
  }
  pre {
    background-color: $codemonger-shade;
    color: $codemonger-invert;
    border-radius: 5px;

    > code {
      background-color: $codemonger-shade;
      line-height: $body-line-height;
      /* cancels the paddings introduced for inline. */
      padding: 0px;
    }
  }
  blockquote {
    color: bulmaLighten($codemonger-invert, 30%);
    background-color: $codemonger-shade;
    border-left: 5px solid bulmaDarken($codemonger-shade, 10%);
    border-radius: 5px;
  }
  a {
    color: $codemonger-link;
    &:hover {
      color: bulmaLighten($codemonger-invert, 15%);
    }
    code {
      color: inherit;
    }
  }
  strong {
    code {
      font-weight: 700;
    }
  }
  table {
    text-align: left;
    thead, tbody {
      tr {
        th, td {
          &:not(:first-child) {
            border-left-width: 1px;
          }
        }
      }
    }
  }
}

.product-content {
  .container {
    position: relative;

    .product-title {
      &.image {
        display: flex;
        place-items: center;
        justify-content: center;
        min-height: calc(100vh - #{$navbar-height} - 3rem);
      }
    }

    .content {
      top: 100vh;
      /* makes the product summary bold and overlap the product logo. */
      p:first-of-type {
        position: absolute;
        bottom: 5.0rem;
        font-weight: 700;
        font-size: 2.0em;
      }
    }
  }
}

.blog-content {
  header {
    padding-bottom: 3rem;
  }
}

$blog-card-height: 11rem;
$blog-card-fade-margin: 3rem;

$product-card-height: 15rem;

.blog-card {
  min-height: $blog-card-height;
  max-height: $blog-card-height;
  /* https://stackoverflow.com/questions/22808040/fading-out-text-on-overflow-with-css-if-the-text-is-bigger-than-allowed */
  &::before {
    position: absolute;
    content: "";
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    pointer-events: none;
    background: linear-gradient(rgba($codemonger, 0) calc(#{$blog-card-height} - #{$blog-card-fade-margin}), $codemonger);
    /* unfortunately, transition is not applied to linear-gradient.
     * https://stackoverflow.com/questions/6542212/use-css3-transitions-with-gradient-backgrounds
     */
    transition: background-color 0.3s;
  }
}

.product-card {
  min-height: $product-card-height;
  max-height: $product-card-height;
}

.blog-card,
.product-card {
  position: relative;
  background: $codemonger;
  transition: background-color 0.3s;
  overflow-y: hidden;
  .card-image {
    .image {
      display: flex;
      place-items: center;
      justify-content: center;
      padding: 1rem;
      height: 150px;
    }
  }
  .blog-title {
    text-decoration: underline;
  }
  .subtitle {
    margin-bottom: 0.5rem;
  }
  .card-content {
    a {
      &:link {
        color: $codemonger-invert;
      }
      &:visited {
        color: $codemonger-invert;
      }
    }
  }
  @media (hover: hover) {
    &:hover {
      background: $codemonger-tint;
      &::before {
        background: linear-gradient(rgba($codemonger-tint, 0) calc(#{$blog-card-height} - #{$blog-card-fade-margin}), $codemonger-tint);
      }
    }
  }
}

.blog-page-number,
.product-page-number {
  @include monospace-font;
}
.current-blog-page-number,
.current-product-page-number {
  margin: 0px 0.5rem;
}

.footer {
  &.is-codemonger-tint {
    background: $codemonger-tint;
  }
  a {
    &:link {
      color: $codemonger-invert;
    }
    &:visited {
      color: $codemonger-invert;
    }
    &:hover {
      text-decoration: underline;
    }
  }
}

.codemonger-content {
  min-height: calc(100vh - #{$navbar-height});
}

